# battery_trading_optimization

./: .gitignore  Dockerfile  README.md  da_optimiser.py  dataset.csv  pyproject.toml
.github/workflows/: ci_pipeline.yml
battery_trading_optimization/: da_optimiser.py
docs/: documentation.md  q&a.md
tests/: test_integration.py  test_unit.py
