[tool.poetry]
name = "battery_optimization"
version = "0.1.0"
description = ""
authors = [" "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
pyomo = "^6.8.2"
highspy = "^1.9.0"
matplotlib = "^3.10.0"
pytest = "^8.3.4"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
